# NeLobbyAutoKit

./: ReadMe.md  TARGET_CONFIG.json
NeLobbyAutoKit/: CMakeLists.txt  NeAutoKit.hpp  main.cpp
NeLobbyAutoKit/libs/Utils/: EnvEncode.cpp  EnvEncode.h
Release/: TARGET_CONFIG.json
